# EngineeringWork

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/cam_device/: CamDevice.cpp  CamDevice.h
src/cmake_init/: AutoGeneratedVariables.h.in
src/initialize/: AppInit.cpp  AppInit.h  AppVersionInit.cpp  AppVersionInit.h  CamDevicesListInit.cpp  CamDevicesListInit.h  CamDevicesListInit_.cpp
src/propertie/: AppProperties.cpp  AppProperties.h  AppVersion.cpp  AppVersion.h  CamDeviceList.cpp  CamDeviceList.h  ListCamDevice.cpp  ListCamDevice.h  Property.h  PropertyTypes.h
